--- a/groups/templates/groups/base.html
+++ b/groups/templates/groups/base.html
@@ -4,10 +4,11 @@
     {% block groups_title %}{% endblock groups_title %}
 {% endblock title %}
 
-{% block subtitle %}
+{% block main_head_subtitle %}
     {% block groups_subtitle %}{% endblock groups_subtitle %}
-{% endblock subtitle %}
+{% endblock main_head_subtitle %}
 
 {% block main_content %}
+    {% block back_link %}{% endblock back_link %}
     {% block groups_main_content %}{% endblock groups_main_content %}
 {% endblock main_content %}
