--- a/groups/templates/groups/discussion_thread_base.html
+++ b/groups/templates/groups/discussion_thread_base.html
@@ -8,6 +8,10 @@
     <h2>Comments on {{ discussion.name }}</h2>
 {% endblock groups_subtitle %}
 
+{% block back_link %}
+    <p><a href="{% url 'group-detail' pk=group.pk %}">Back to {{ group.name }}</a></p>
+{% endblock back_link %}
+
 {% block groups_main_content %}
     <ul>
         {% for comment in comments %}
