Add a subscribe button that works correctly!

--- a/groups/templates/groups/discussion_thread_base.html
+++ b/groups/templates/groups/discussion_thread_base.html
@@ -13,6 +13,7 @@
 {% endblock back_link %}
 
 {% block groups_main_content %}
+    {% include "groups/subscribe_button.html" %}
     <ul>
         {% for comment in comments %}
             <li>
