Use {% block subtitle %} instead of main_head_subtitle.

--- a/groups/templates/groups/base.html
+++ b/groups/templates/groups/base.html
@@ -4,9 +4,9 @@
     {% block groups_title %}{% endblock groups_title %}
 {% endblock title %}
 
-{% block main_head_subtitle %}
+{% block subtitle %}
     {% block groups_subtitle %}{% endblock groups_subtitle %}
-{% endblock main_head_subtitle %}
+{% endblock subtitle %}
 
 {% block main_content %}
     {% block back_link %}{% endblock back_link %}
