Add permalinks to comments.
* A comment's get_absolute_url() now includes a page jump.
* The comment's time links to this so that users have access
  to the permalinks too.

--- a/groups/templates/groups/discussion_thread_base.html
+++ b/groups/templates/groups/discussion_thread_base.html
@@ -18,9 +18,11 @@
         {% for comment in comments %}
             <li>
                 <ul>
+                    <li>
+                        <a name="{{ comment.get_pagejump_anchor }}"></a>
+                        {{ comment.user }} wrote at <a href="{{ comment.get_pagejump }}">{{ comment.date_created }}</a>:
+                    </li>
                     <li>{{ comment.body }}</li>
-                    <li>{{ comment.user }}</li>
-                    <li>{{ comment.date_created }}</li>
                 </ul>
             </li>
         {% endfor %}
