--- a/groups/templates/groups/discussion_thread_base.html
+++ b/groups/templates/groups/discussion_thread_base.html
@@ -17,9 +17,8 @@
     <ul>
         {% for comment in comments %}
             <li>
-                <ul>
+                <ul id="{{ comment.get_pagejump_anchor }}">
                     <li>
-                        <a name="{{ comment.get_pagejump_anchor }}"></a>
                         {{ comment.user }} wrote at <a href="{{ comment.get_pagejump }}">{{ comment.date_created }}</a>:
                     </li>
                     <li>{{ comment.body }}</li>
