--- a/groups/templates/groups/discussion_thread_base.html
+++ b/groups/templates/groups/discussion_thread_base.html
@@ -20,8 +20,15 @@
                 <ul id="{{ comment.get_pagejump_anchor }}">
                     <li>
                         {{ comment.user }} wrote at <a href="{{ comment.get_pagejump }}">{{ comment.date_created }}</a>:
+                        {% if comment.user_may_delete %}(<a href="{% url 'comment-delete' pk=comment.pk %}">delete this comment</a>){% endif %}
                     </li>
-                    <li>{{ comment.body }}</li>
+                    <li>
+                        {% if comment.is_deleted %}
+                            (Post deleted)
+                        {% else %}
+                            {{ comment.body }}
+                        {% endif %}
+                    </li>
                 </ul>
             </li>
         {% endfor %}
