--- a/groups/templates/groups/comment_delete_base.html
+++ b/groups/templates/groups/comment_delete_base.html
@@ -14,9 +14,9 @@
     <p>Are you sure you want to delete this comment?</p>
     <ul>
         <li>
-            {{ comment.user }} wrote at {{ comment.date_created }}:
+            {{ object.user }} wrote at {{ object.date_created }}:
         </li>
-        <li>{{ comment.body }}</li>
+        <li>{{ object.body }}</li>
     </ul>
 
     <form action="{% url 'comment-delete' pk=object.pk %}" method="post">
