Display files in the discussion thread view.

--- a/groups/templates/groups/discussion_thread_base.html
+++ b/groups/templates/groups/discussion_thread_base.html
@@ -26,7 +26,12 @@
                         {% if comment.is_deleted %}
                             (Post deleted)
                         {% else %}
-                            {{ comment.body }}
+                            {% if comment.body %}
+                                <p>{{ comment.body }}</p>
+                            {% endif %}
+                            {% if comment.file %}
+                                Attached file: <a href="{{ comment.file.url }}">{{ comment.file.name }}</a>
+                            {% endif %}
                         {% endif %}
                     </li>
                 </ul>
