--- a/groups/templates/groups/discussion_thread_base.html
+++ b/groups/templates/groups/discussion_thread_base.html
@@ -40,4 +40,6 @@
     </ul>
 
     {% crispy form %}
+
+    <p><a href="{% url 'comment-upload-file' pk=discussion.pk %}">Upload a file to this discussion</a></p>
 {% endblock groups_main_content %}
