--- a/groups/templates/groups/discussion_thread_base.html
+++ b/groups/templates/groups/discussion_thread_base.html
@@ -16,25 +16,8 @@
     {% include "groups/subscribe_button.html" %}
     <ul>
         {% for comment in comments %}
-            <li>
-                <ul id="{{ comment.get_pagejump_anchor }}">
-                    <li>
-                        {{ comment.user }} wrote at <a href="{{ comment.get_pagejump }}">{{ comment.date_created }}</a>:
-                        {% if comment.user_may_delete %}(<a href="{% url 'comment-delete' pk=comment.pk %}">delete this comment</a>){% endif %}
-                    </li>
-                    <li>
-                        {% if comment.is_deleted %}
-                            (Post deleted)
-                        {% else %}
-                            {% if comment.body %}
-                                <p>{{ comment.body }}</p>
-                            {% endif %}
-                            {% if comment.file %}
-                                Attached file: <a href="{{ comment.file.url }}">{{ comment.file.name }}</a>
-                            {% endif %}
-                        {% endif %}
-                    </li>
-                </ul>
+            <li id="{{ comment.get_pagejump_anchor }}">
+                {% comment_render comment request %}
             </li>
         {% endfor %}
     </ul>
