Added `get_context_data` & `render` to `BaseComment`.
Added `templatetags/groups_tags/comment_render`.

Loaded templatetags in `discussion_thread_base.html`.

--- a/groups/templates/groups/discussion_thread_base.html
+++ b/groups/templates/groups/discussion_thread_base.html
@@ -2,6 +2,8 @@
 
 {% load crispy_forms_tags %}
 
+{% load groups_tags %}
+
 {% block groups_title %}Comments on {{ discussion.name }}{% endblock groups_title %}
 
 {% block groups_subtitle %}
