--- a/groups/templates/groups/text_comment.html
+++ b/groups/templates/groups/text_comment.html
@@ -1,11 +1,5 @@
-<li>
-    {{ comment.user }} wrote at <a href="{{ comment.get_pagejump }}">{{ comment.date_created }}</a>:
-    {% if comment.user_may_delete %}(<a href="{% url 'comment-delete' pk=comment.pk %}">delete this comment</a>){% endif %}
-</li>
-<li>
-    {% if comment.is_deleted %}
-        (Post deleted)
-    {% else %}
-        <p>{{ comment.body }}</p>
-    {% endif %}
-</li>
+{% extends "groups/comment_base.html" %}
+
+{% block comment_visible %}
+    <p>{{ comment.body }}</p>
+{% endblock comment_visible %}
