Rename subscription forms in templates

--- a/groups/templates/groups/group_subscribe_button.html
+++ b/groups/templates/groups/group_subscribe_button.html
@@ -1,5 +1,5 @@
 {% load crispy_forms_tags %}
 
 <div id="group-subscribe-button">
-    {% crispy subscribe-form %}
+    {% crispy group-subscribe-form %}
 </div>
