--- a/groups/templates/groups/subscribe_button_base.html
+++ b/groups/templates/groups/subscribe_button_base.html
@@ -1,5 +1,5 @@
 {% load crispy_forms_tags %}
 
 <div id="discussion-subscribe-button">
-    {% crispy subscribe-form %}
+    {% crispy discussion-subscribe-form %}
 </div>
