Fix up the templates and give the FK a related_name.

--- a/groups/templates/groups/file_comment.html
+++ b/groups/templates/groups/file_comment.html
@@ -2,5 +2,5 @@
 {% load static %}
 
 {% block comment_visible %}
-    {% include "file_comment_inner.html" %}
+    {% include "groups/file_comment_inner.html" %}
 {% endblock comment_visible %}
