--- a/groups/templates/groups/text_comment.html
+++ b/groups/templates/groups/text_comment.html
@@ -2,7 +2,5 @@
 
 {% block comment_visible %}
     <p>{{ comment.body }}</p>
-    {% for attachment in comment.attachments.all %}
-        {% include "groups/file_comment_inner.html" with comment=attachment %}
-    {% endfor %}
+    {% include "groups/_comment_attachments.html" %}
 {% endblock comment_visible %}
