--- a/groups/templates/groups/comment_post_with_attachment_base.html
+++ b/groups/templates/groups/comment_post_with_attachment_base.html
@@ -2,10 +2,10 @@
 
 {% load crispy_forms_tags %}
 
-{% block groups_title %}Upload a file to {{ discussion.name }}{% endblock groups_title %}
+{% block groups_title %}Post to {{ discussion.name }}{% endblock groups_title %}
 
 {% block groups_subtitle %}
-    <h2>Upload a file to {{ discussion.name }}</h2>
+    <h2>Post to {{ discussion.name }}</h2>
 {% endblock groups_subtitle %}
 
 {% block back_link %}
